2007-02-25  Jim Meyering  <jim@meyering.net>

	* Makefile.maint (announcement): Update from coreutils.

	* README-hacking: Renamed from README-cvs, and sync'd from coreutils.
	* README-cvs: Renamed to README-hacking.

	* bootstrap: Update from coreutils.

2007-02-22  Jim Meyering  <jim@meyering.net>

	* bootstrap: Update from coreutils.

2007-02-19  Jim Meyering  <jim@meyering.net>

	Adapt to newer gnulib.
	* src/system.h: Don't include <exit.h>.
	* bootstrap: Use "._bootmp" as the temporary directory name,
	not ".#bootmp".  The latter's "#" caused trouble with the new,
	gnulib-added "LINK_WARNING_H = $(top_srcdir)/.#bootmp/..." line.

2007-02-01  Jim Meyering  <jim@meyering.net>

	* configure.ac: Put config.h in lib/.
	* src/Makefile.am (AM_CPPFLAGS): Remove "-I..".  No longer needed.

2007-01-30  Jim Meyering  <jim@meyering.net>

	* Makefile.maint: Upgrade from coreutils.
	* bootstrap: Likewise.
	* bootstrap.conf: Add announce-gen.

	* src/cppi.l (INPUT_AND_ECHO): Guard ({})-using definition
	with "#if __GNUC__ && ! __STRICT_ANSI__", not just __GNUC__.
	Put a static declaration of "input" in the #else block.
	(usage): Divide --help output string into smaller chunks,
	each of which is no larger than the C89 max of 509.
	Use the HELP_OPTION_DESCRIPTION and VERSION_OPTION_DESCRIPTION macros.
	Use the PACKAGE_BUGREPORT macro.

	* src/system.h: Don't include "stpcpy.h".

2006-10-22  Jim Meyering  <jim@meyering.net>

	Version 1.13.

	* NEWS: Record the 6.4 release date.
	* Makefile.maint: Update to work with git.

2006-10-16  Jim Meyering  <jim@meyering.net>

	* bootstrap (slurp): Also update .gitignore if it exists.

2006-10-14  Jim Meyering  <jim@meyering.net>

	* src/system.h (EXIT_FAILURE, EXIT_SUCCESS): Remove definitions.
	Instead, include "exit.h".  This hereby retires the work-around for
	"Sony NEWS-OS Release 4.0C"'s bug due to "#define EXIT_FAILURE 0".

2006-09-21  Jim Meyering  <jim@meyering.net>

	* configure.ac: Require autoconf-2.60 and automake-1.9.6.