@@ -54,16 +54,7 @@ you must include <sys/types.h> before including this file
 
 #include "configmake.h"
 
-#if TIME_WITH_SYS_TIME
-# include <sys/time.h>
-# include <time.h>
-#else
-# if HAVE_SYS_TIME_H
-#  include <sys/time.h>
-# else
-#  include <time.h>
-# endif
-#endif
+#include <time.h>
 
 /* Since major is a function on SVR4, we can't use `ifndef major'.  */
 #if MAJOR_IN_MKDEV
@@ -230,8 +221,6 @@ enum
 #endif
 
 #include "stat-macros.h"
-
-#include "timespec.h"
 
 #include <inttypes.h>
 
