@@ -1,3 +1,9 @@
+2007-03-24  Jim Meyering  <jim@meyering.net>
+
+	* src/system.h: Simply include <time.h>, now that that is as
+	portable as the classic #if TIME_WITH_SYS_TIME... autoconf idiom.
+	Don't include timespec.h.  No longer needed.
+
 2007-02-25  Jim Meyering  <jim@meyering.net>
 
 	* Makefile.maint (announcement): Update from coreutils.
